Update Install 12.4.md