@@ -28,87 +28,8 @@ Wait for 100% Loading Java.
 8. Click Next to confirm default folder **C:\OracleATS**.
 9. Enter password and press Next.
 10. Click Allow access to Windows Firewall Security Alert.
-11. Click Install. Wait for 100%. It gets stuck some at 99%.
+11. Click Install. Wait for 100%. **It gets stuck some at 99%.**
 12. Click Exit.
-
-### Envrionment Variables created
-
-DB_HOST
-DB_HOSTNAME
-DB_PASS
-DB_PORT
-DB_URL
-DB_USER
-
-HELPER_SERVICE = 7979
-MW_HOME = C:\OracleATS\wls
-OATS_AGENT_PASS
-OATS_HOME = C:\OracleATS
-Path = C:\OracleATS\oxe\app\oracle\product\10.2.0\server\bin;....
-WL_HOME = C:\OracleATS\wls\wlserver
-WLS_PASS
-
-
-### Windows Start menu
-1. Click Start orb
-2. Click All Programs
-3. Under Oracle Application Testing Suite:
-
-* Administrator - Shortcut To http://localhost:8088/admin (does not support IE 11)
-* OpenScript - C:\OracleATS\openScript\OpenScript.exe -configuration openscript_configuration -vm C:\OracleATS\openScript\jre\bin\javaw.exe -vmargs -Xmx512m -XX:MaxPermSize=256m
-* Oracle Load Testing - Shortcut To http://localhost:8088/olt/
-* Oracle Test Manager - Shortcut To http://localhost:8088/otm/
-* Release Notes - C:\OracleATS\docs\en\readme.htm
-* Uninstall OATS - C:\OracleATS\uninstall\bin\uninstall.bat
-* Documentation (dated July, 2014)
-	ATS Installation Guide - C:\OracleATS\docs\en\OATSInstallationGuide.pdf
-	Getting Started Guide - C:\OracleATS\docs\en\OATSGettingStartedGuide.pdf
-	Load Testing ServerStats Guide - C:\OracleATS\docs\en\OLTLoadTestingServerStatsGuide.pdf
-	Load Testing User's Guide - C:\OracleATS\docs\en\OLTLoadTestingUsersGuide.pdf
-	OpenScript Programmer's Reference - C:\OracleATS\docs\en\OpenScriptProgammersReference.pdf
-	OpenScript User's Guide - C:\OracleATS\docs\en\OpenScriptUsersGuide.pdf
-	Test Manager User's Guide - C:\OracleATS\docs\en\OTMTestManagerUsersGuide.pdf
-* Samples
-	Start MedRec creates a window to http://localhost:7011/medrec/
-	Stop MedRec
-* Tools
-	About OATS - C:\OracleATS\docs\en\about_oats.htm
-	Create Support Package - C:\OracleATS\bin\oats_support.bat
-	Oracle Application Testing Database Configuration - C:\OracleATS\bin\DbConfig.bat
-	Oracle Load Testing Agent Authorization Manager - C:\OracleATS\jdk\jre\bin\javaw.exe -jar C:\OracleATS\agentmanager\AMAuthManager.jar
-	Restart Oracle Application Testing - target C:\OracleATS\bin\restartSvc.bat "Oracle ATS Server"
-	Stop Oracle Application Testing - target C:\OracleATS\bin\stopSvc.bat "Oracle ATS Server"
-
-### Services installed
-
-Oralce ATS Agent - Launch requested load agents and monitor process health.
-	Started automatically from
-	C:\OracleATS\agentmanager\bin\AgentManagerService.exe -s C:\OracleATS\agentmanager\bin\\AgentManagerService.conf
-	
-Oracle ATS Helper - Query helpers launched by OpenScript/JavaAgent and reuse them.
-	Started automatically from 
-	C:\OracleATS\helperService\bin\wrapper.exe -s C:\OracleATS\helperService\conf\wrapper.conf
-	
-Oracle ATS Server at C:\ORACLE~1\wls\wlserver\server\bin\beasvc.exe
-
-OracleServiceXE -
-	Auto started at c:\oracleats\oxe\app\oracle\product\10.2.0\server\bin\ORACLE.EXE XE
-
-OracleJobSchedulerXE - Disabled at c:\oracleats\oxe\app\oracle\product\10.2.0\server\Bin\extjob.exe XE
-
-OracleXEClrAgent - Manually started from C:\OracleATS\oxe\app\oracle\product\10.2.0\server\bin\OraClrAgnt.exe agent_sid=CLRExtProc max_dispatchers=2 tcp_dispatchers=0 max_task_threads=6 max_sessions=25
-
-OracleXETNSListener - 
-	Started automatically at C:\OracleATS\oxe\app\oracle\product\10.2.0\server\BIN\tnslsnr.exe
-
-
-
-
-
-
-### Windows Registry
-
-
 
 
 
